[package]
authors = ["Julian Kramer <kramerjul@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "hydroponic-stm32f4"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2"
# panic-itm = "0.4"
stm32f4xx-hal = { version = "0.15", features = ["stm32f401", "usb_fs"] }
dht-sensor = "0.2.1"
dht-hal-drv = "0.2.2"
stm32-usbd = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
heapless = { version = "0.7.16", features = ["serde"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "hydroponic-stm32f4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
